--- a/temp.html
+++ b/temp.html
@@ -731,7 +731,7 @@
             setLoading(true);
 
             try {
-                const response = await fetch('https://backend-luze.onrender.com/api/latex-string', {
+                const response = await fetch('https://back-wnre.onrender.com/api/latex-string', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
@@ -1036,4 +1036,5 @@
 
 
 </html>
+
 
